Tratamento da lista